--- a/app/view/sisters.html
+++ b/app/view/sisters.html
@@ -112,7 +112,7 @@
     };
     </script>
     <body onload="InitLive2D()" style="-webkit-app-region: drag">
-        <div class="message" style="opacity:0.2;" width="300" height="50">dsdsdsd</div>
+        <!-- <div class="message" style="opacity:0.2;" width="300" height="50">dsdsdsd</div> -->
         <canvas id="mycanvas" width="300" height="400" ></canvas>
   </body>
   <script>
